--- a/Frontend/implementations/typescript/src/bck/player.html
+++ b/Frontend/implementations/typescript/src/bck/player.html
@@ -1,6 +1,6 @@
 <!-- Copyright Epic Games, Inc. All Rights Reserved. -->
 <!DOCTYPE HTML>
-<html style="width: 100%; height: 100%" lang="en-US" dir="ltr" >
+<html style="width: 100%; height: 100%">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
